// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbcResourceTags Should render empty resource tags 1`] = `
<abc-resource-tags
  maxCount={Infinity}
  tags={Array []}
>
  <div
    className="ta-component abc-resource-tags"
    data-lego="react"
    style={Object {}}
  >
    <abc-resource-tags__empty>
      <div
        className="ta-component abc-resource-tags__empty"
        data-lego="react"
        style={Object {}}
      >
        abc-resource-tags__empty:text-empty
      </div>
    </abc-resource-tags__empty>
  </div>
</abc-resource-tags>
`;

exports[`AbcResourceTags Should render resource tags 1`] = `
<abc-resource-tags
  maxCount={Infinity}
  tags={
    Array [
      Object {
        "name": Object {
          "ru": "tag_name",
        },
        "slug": "tag_slug",
      },
    ]
  }
>
  <div
    className="ta-component abc-resource-tags"
    data-lego="react"
    style={Object {}}
  >
    <abc-resource-tags__tag
      key="tag_slug"
    >
      <div
        className="ta-component abc-resource-tags__tag"
        data-lego="react"
        style={Object {}}
      >
        <abc-resource-tag
          tag={
            Object {
              "name": Object {
                "ru": "tag_name",
              },
              "slug": "tag_slug",
            }
          }
        >
          <div
            className="ta-component abc-resource-tag"
            data-lego="react"
            style={Object {}}
          >
            <abc-resource-tag__text
              key="text"
            >
              <div
                className="ta-component abc-resource-tag__text"
                data-lego="react"
                style={Object {}}
              >
                tag_name
              </div>
            </abc-resource-tag__text>
          </div>
        </abc-resource-tag>
      </div>
    </abc-resource-tags__tag>
  </div>
</abc-resource-tags>
`;

exports[`AbcResourceTags Should render resource tags with opened popup 1`] = `
<abc-resource-tags
  maxCount={1}
  onButtonClick={[MockFunction]}
  onPopupOutsideClick={[MockFunction]}
  popupOpen={true}
  tags={
    Array [
      Object {
        "name": Object {
          "ru": "tag_name",
        },
        "slug": "tag_slug",
      },
      Object {
        "name": Object {
          "ru": "tag_name2",
        },
        "slug": "tag_slug2",
      },
    ]
  }
>
  <div
    className="ta-component abc-resource-tags"
    data-lego="react"
    style={Object {}}
  >
    <abc-resource-tags__tag
      key="tag_slug"
    >
      <div
        className="ta-component abc-resource-tags__tag"
        data-lego="react"
        style={Object {}}
      >
        <abc-resource-tag
          tag={
            Object {
              "name": Object {
                "ru": "tag_name",
              },
              "slug": "tag_slug",
            }
          }
        >
          <div
            className="ta-component abc-resource-tag"
            data-lego="react"
            style={Object {}}
          >
            <abc-resource-tag__text
              key="text"
            >
              <div
                className="ta-component abc-resource-tag__text"
                data-lego="react"
                style={Object {}}
              >
                tag_name
              </div>
            </abc-resource-tag__text>
          </div>
        </abc-resource-tag>
      </div>
    </abc-resource-tags__tag>
    <link
      attrs={
        Object {
          "ref": Object {
            "current": <span
              class="control link link_theme_ghost abc-resource-tags__link"
              data-lego="react"
              role="button"
              tabindex="0"
            >
              +1
            </span>,
          },
        }
      }
      key="link"
      mix={
        Object {
          "block": "abc-resource-tags",
          "elem": "link",
          "mods": Object {},
        }
      }
      onClick={[MockFunction]}
      preudo="yes"
      tabIndex="0"
      text="+1"
      theme="ghost"
    >
      <span
        className="control link link_theme_ghost abc-resource-tags__link"
        data-lego="react"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        +1
      </span>
    </link>
    <popup2
      anchor={[Function]}
      autoclosable={true}
      directions={
        Array [
          "bottom-left",
          "bottom-center",
          "bottom-right",
          "top-left",
          "top-center",
          "top-right",
          "right-top",
          "right-center",
          "right-bottom",
          "left-top",
          "left-center",
          "left-bottom",
        ]
      }
      hasTail={true}
      hiding={true}
      key="popup"
      mix={
        Object {
          "block": "abc-resource-tags",
          "elem": "popup",
          "mods": Object {},
        }
      }
      onAfterClose={[Function]}
      onAfterOpen={[Function]}
      onBeforeClose={[Function]}
      onBeforeOpen={[Function]}
      onOutsideClick={[MockFunction]}
      scope={[Function]}
      secondaryOffset={0}
      tailOffset={0}
      target="anchor"
      theme="normal"
      view="classic"
      visible={true}
      zIndexGroupLevel={20}
    />
  </div>
</abc-resource-tags>
`;

exports[`AbcResourceTags Should render resource tags with popup 1`] = `
<abc-resource-tags
  maxCount={1}
  onButtonClick={[MockFunction]}
  onPopupOutsideClick={[MockFunction]}
  popupOpen={false}
  tags={
    Array [
      Object {
        "name": Object {
          "ru": "tag_name",
        },
        "slug": "tag_slug",
      },
      Object {
        "name": Object {
          "ru": "tag_name2",
        },
        "slug": "tag_slug2",
      },
    ]
  }
>
  <div
    className="ta-component abc-resource-tags"
    data-lego="react"
    style={Object {}}
  >
    <abc-resource-tags__tag
      key="tag_slug"
    >
      <div
        className="ta-component abc-resource-tags__tag"
        data-lego="react"
        style={Object {}}
      >
        <abc-resource-tag
          tag={
            Object {
              "name": Object {
                "ru": "tag_name",
              },
              "slug": "tag_slug",
            }
          }
        >
          <div
            className="ta-component abc-resource-tag"
            data-lego="react"
            style={Object {}}
          >
            <abc-resource-tag__text
              key="text"
            >
              <div
                className="ta-component abc-resource-tag__text"
                data-lego="react"
                style={Object {}}
              >
                tag_name
              </div>
            </abc-resource-tag__text>
          </div>
        </abc-resource-tag>
      </div>
    </abc-resource-tags__tag>
    <link
      attrs={
        Object {
          "ref": Object {
            "current": <span
              class="control link link_theme_ghost abc-resource-tags__link"
              data-lego="react"
              role="button"
              tabindex="0"
            >
              +1
            </span>,
          },
        }
      }
      key="link"
      mix={
        Object {
          "block": "abc-resource-tags",
          "elem": "link",
          "mods": Object {},
        }
      }
      onClick={[MockFunction]}
      preudo="yes"
      tabIndex="0"
      text="+1"
      theme="ghost"
    >
      <span
        className="control link link_theme_ghost abc-resource-tags__link"
        data-lego="react"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        role="button"
        style={Object {}}
        tabIndex="0"
      >
        +1
      </span>
    </link>
    <popup2
      anchor={[Function]}
      autoclosable={true}
      directions={
        Array [
          "bottom-left",
          "bottom-center",
          "bottom-right",
          "top-left",
          "top-center",
          "top-right",
          "right-top",
          "right-center",
          "right-bottom",
          "left-top",
          "left-center",
          "left-bottom",
        ]
      }
      hasTail={true}
      hiding={true}
      key="popup"
      mix={
        Object {
          "block": "abc-resource-tags",
          "elem": "popup",
          "mods": Object {},
        }
      }
      onAfterClose={[Function]}
      onAfterOpen={[Function]}
      onBeforeClose={[Function]}
      onBeforeOpen={[Function]}
      onOutsideClick={[MockFunction]}
      scope={[Function]}
      secondaryOffset={0}
      tailOffset={0}
      target="anchor"
      theme="normal"
      view="classic"
      visible={false}
      zIndexGroupLevel={20}
    />
  </div>
</abc-resource-tags>
`;
